--- a/en.yml
+++ b/en.yml
@@ -1,2 +1,2 @@
-cat: Cat
-dog: Dog
+eukaryota.animalia.chordata.mammalia.carnivora.felidae.felis.felis_catus: Cat
+eukaryota.animalia.chordata.mammalia.carnivora.canidae.canis.canis_lupus_familiaris: Dog
